--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/http": "4.2.5",
     "@angular/platform-browser": "4.2.5",
     "@angular/router": "4.2.5",
+    "big-integer": "^1.6.24",
     "nativescript-angular": "4.2.0",
     "nativescript-theme-core": "1.0.4",
     "reflect-metadata": "0.1.10",
