documentation, market service, databaseservice

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser": "4.2.5",
     "@angular/router": "4.2.5",
     "big-integer": "^1.6.24",
+    "crypto-js": "^3.1.9-1",
     "nativescript-angular": "4.2.0",
+    "nativescript-sqlite": "^1.1.7",
     "nativescript-theme-core": "1.0.4",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.4.3",
