--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "rxjs": "5.4.3",
     "seedrandom": "^2.4.3",
     "tns-core-modules": "3.1.1",
+    "tweetnacl": "^1.0.0",
     "zone.js": "0.8.16"
   },
   "devDependencies": {
