--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "4.2.5",
     "big-integer": "^1.6.24",
     "crypto-js": "^3.1.9-1",
+    "js-nacl": "^1.2.2",
     "nativescript-angular": "4.2.0",
     "nativescript-sqlite": "^1.1.7",
     "nativescript-theme-core": "1.0.4",
@@ -30,14 +31,15 @@
     "rxjs": "5.4.3",
     "seedrandom": "^2.4.3",
     "tns-core-modules": "3.1.1",
-    "tweetnacl": "^1.0.0",
     "zone.js": "0.8.16"
   },
   "devDependencies": {
+    "@types/jasmine": "^2.5.53",
     "babel-traverse": "6.26.0",
     "babel-types": "6.26.0",
     "babylon": "6.18.0",
     "codelyzer": "3.1.2",
+    "jasmine": "^2.7.0",
     "lazy": "1.0.11",
     "nativescript-dev-sass": "1.3.0",
     "nativescript-dev-typescript": "0.5.0",
