--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     }
   },
   "scripts": {
-    "lint": "tslint \"app/**/*.ts\""
+    "lint": "tslint \"app/**/*.ts\"",
+    "pretest": "tsc",
+    "test": "nyc mocha",
+    "watch": "mocha-typescript-watch",
+    "prepare": "tsc"
   },
   "dependencies": {
     "@angular/animations": "4.2.5",
@@ -34,16 +38,21 @@
     "zone.js": "0.8.16"
   },
   "devDependencies": {
-    "@types/jasmine": "^2.5.53",
+    "@types/chai": "^4.0.3",
+    "@types/mocha": "^2.2.41",
     "babel-traverse": "6.26.0",
     "babel-types": "6.26.0",
     "babylon": "6.18.0",
+    "chai": "^4.1.1",
     "codelyzer": "3.1.2",
-    "jasmine": "^2.7.0",
     "lazy": "1.0.11",
+    "mocha": "^3.5.0",
+    "mocha-typescript": "^1.1.7",
     "nativescript-dev-sass": "1.3.0",
     "nativescript-dev-typescript": "0.5.0",
     "node-sass": "4.5.3",
+    "nyc": "^11.1.0",
+    "source-map-support": "^0.4.16",
     "tslint": "5.6.0",
     "typescript": "2.4.2"
   }
