--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "crypto-js": "^3.1.9-1",
     "js-nacl": "^1.2.2",
     "libsodium": "^0.5.2",
+    "lokijs": "^1.5.0",
     "nativescript-angular": "4.2.0",
     "nativescript-sqlite": "^1.1.7",
     "nativescript-theme-core": "1.0.4",
