nativescipt loki fs adapter, testing

--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "@angular/router": "4.2.5",
     "big-integer": "^1.6.24",
     "crypto-js": "^3.1.9-1",
+    "file-system": "^2.2.2",
     "js-nacl": "^1.2.2",
     "libsodium": "^0.5.2",
+    "loki-nativescript-adapter": "^1.0.3",
     "lokijs": "^1.5.0",
     "nativescript-angular": "4.2.0",
     "nativescript-numeric-keyboard": "^3.0.3",
+    "nativescript-snackbar": "^1.2.0",
     "nativescript-sqlite": "^1.1.7",
     "nativescript-theme-core": "1.0.4",
     "reflect-metadata": "0.1.10",
