--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nativescript-snackbar": "^1.2.0",
     "nativescript-sqlite": "^1.1.7",
     "nativescript-theme-core": "1.0.4",
+    "nativescript-zxing": "^1.5.2",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.4.3",
     "seedrandom": "^2.4.3",
