--- a/app/App_Resources/Android/app.gradle
+++ b/app/App_Resources/Android/app.gradle
@@ -5,12 +5,15 @@
 //	compile 'com.android.support:recyclerview-v7:+'
 //}
 
-android {  
-  defaultConfig {  
+android {
+  defaultConfig {
     generatedDensities = []
-    applicationId = "org.nativescript.burstpocket"  
-  }  
-  aaptOptions {  
-    additionalParameters "--no-version-vectors"  
-  }  
-} 
+    applicationId = "org.nativescript.burstpocket"
+  }
+  aaptOptions {
+    additionalParameters "--no-version-vectors"
+  }
+  configurations {
+    compile.exclude group: 'com.google.zxing'
+  }
+}
