--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "loki-nativescript-adapter": "^1.0.3",
     "lokijs": "^1.5.0",
     "nativescript-angular": "4.2.0",
+    "nativescript-barcodescanner": "^2.6.1",
     "nativescript-numeric-keyboard": "^3.0.3",
     "nativescript-snackbar": "^1.2.0",
     "nativescript-sqlite": "^1.1.7",
