--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@angular/router": "4.2.5",
     "big-integer": "^1.6.24",
     "crypto-js": "^3.1.9-1",
+    "elliptic": "^6.4.0",
     "file-system": "^2.2.2",
-    "js-nacl": "^1.2.2",
     "libsodium": "^0.5.2",
     "loki-nativescript-adapter": "^1.0.3",
     "lokijs": "^1.5.0",
