--- a/app/App_Resources/Android/AndroidManifest.xml
+++ b/app/App_Resources/Android/AndroidManifest.xml
@@ -28,8 +28,10 @@
 		<activity
 			android:name="com.tns.NativeScriptActivity"
 			android:label="@string/title_activity_kimera"
+            android:screenOrientation="portrait"
 			android:configChanges="keyboardHidden|orientation|screenSize"
 			android:theme="@style/LaunchScreenTheme">
+
 
 			<meta-data android:name="SET_THEME_ON_LAUNCH" android:resource="@style/AppTheme" />
 
