fixes, refactoring create transiation to tabs, selectWallet changes

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nativescript-angular": "4.2.0",
     "nativescript-barcodescanner": "^2.6.1",
     "nativescript-numeric-keyboard": "^3.0.3",
+    "nativescript-pulltorefresh": "^2.0.2",
     "nativescript-snackbar": "^1.2.0",
     "nativescript-sqlite": "^1.1.7",
     "nativescript-theme-core": "1.0.4",
