--- a/app/App_Resources/Android/AndroidManifest.xml
+++ b/app/App_Resources/Android/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="__PACKAGE__"
 	android:versionCode="1"
-	android:versionName="1.0">
+	android:versionName="0.1.0"
+    android:label="Burstcoin Wallet">
 
 	<supports-screens
 		android:smallScreens="true"
