--- a/app/App_Resources/Android/AndroidManifest.xml
+++ b/app/App_Resources/Android/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="__PACKAGE__"
 	android:versionCode="1"
-	android:versionName="0.1.0"
-    android:label="Burstcoin Wallet">
+	android:versionName="0.1.0">
 
 	<supports-screens
 		android:smallScreens="true"
@@ -23,7 +22,7 @@
 		android:name="com.tns.NativeScriptApplication"
 		android:allowBackup="true"
 		android:icon="@drawable/icon"
-		android:label="@string/app_name"
+		android:label="Burstcoin Wallet"
 		android:theme="@style/AppTheme">
 
 		<activity
