--- a/app/App_Resources/Android/AndroidManifest.xml
+++ b/app/App_Resources/Android/AndroidManifest.xml
@@ -21,8 +21,8 @@
 	<application
 		android:name="com.tns.NativeScriptApplication"
 		android:allowBackup="true"
-		android:icon="@drawable/icon"
-		android:label="Burstcoin Wallet"
+		android:icon="@drawable/logo"
+		android:label="@string/app_name"
 		android:theme="@style/AppTheme">
 
 		<activity
@@ -31,7 +31,6 @@
             android:screenOrientation="portrait"
 			android:configChanges="keyboardHidden|orientation|screenSize"
 			android:theme="@style/LaunchScreenTheme">
-
 
 			<meta-data android:name="SET_THEME_ON_LAUNCH" android:resource="@style/AppTheme" />
 
