--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "license": "closed source",
   "readme": "none",
   "repository": "private",
+  "profiling": "timeline",
   "nativescript": {
     "id": "org.icewave.burstcoinwallet",
     "tns-android": {
-      "version": "3.1.1"
+      "version": "3.2.0"
     }
   },
   "scripts": {
@@ -14,7 +15,14 @@
     "pretest": "tsc",
     "test": "nyc mocha",
     "watch": "mocha-typescript-watch",
-    "prepare": "tsc"
+    "prepare": "tsc",
+    "ns-bundle": "ns-bundle",
+    "publish-ios-bundle": "npm run ns-bundle --ios --publish-app",
+    "generate-android-snapshot": "generate-android-snapshot --targetArchs arm,arm64,ia32 --install",
+    "start-android-bundle": "npm run ns-bundle --android --run-app",
+    "start-ios-bundle": "npm run ns-bundle --ios --run-app",
+    "build-android-bundle": "npm run ns-bundle --android --build-app",
+    "build-ios-bundle": "npm run ns-bundle --ios --build-app"
   },
   "dependencies": {
     "@angular/animations": "4.3.6",
@@ -45,6 +53,8 @@
     "zone.js": "0.8.16"
   },
   "devDependencies": {
+    "@angular/compiler-cli": "4.3.6",
+    "@ngtools/webpack": "~1.6.0",
     "@types/chai": "^4.0.3",
     "@types/mocha": "^2.2.41",
     "babel-traverse": "6.26.0",
@@ -52,15 +62,25 @@
     "babylon": "6.18.0",
     "chai": "^4.1.1",
     "codelyzer": "3.1.2",
+    "copy-webpack-plugin": "~4.0.1",
+    "extract-text-webpack-plugin": "~3.0.0",
     "lazy": "1.0.11",
     "mocha": "^3.5.0",
     "mocha-typescript": "^1.1.7",
+    "nativescript-css-loader": "~0.26.0",
     "nativescript-dev-sass": "1.3.0",
     "nativescript-dev-typescript": "0.5.0",
+    "nativescript-dev-webpack": "^0.8.0",
+    "nativescript-worker-loader": "~0.8.1",
     "node-sass": "4.5.3",
     "nyc": "^11.1.0",
+    "raw-loader": "~0.5.1",
+    "resolve-url-loader": "~2.1.0",
     "source-map-support": "^0.4.16",
     "tslint": "5.6.0",
-    "typescript": "2.4.2"
+    "typescript": "2.5.2",
+    "webpack": "~3.2.0",
+    "webpack-bundle-analyzer": "^2.8.2",
+    "webpack-sources": "~1.0.1"
   }
 }
