--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "build-ios-bundle": "npm run ns-bundle --ios --build-app"
   },
   "dependencies": {
-    "@angular/animations": "4.3.6",
-    "@angular/common": "4.3.6",
-    "@angular/compiler": "4.3.6",
-    "@angular/core": "4.3.6",
-    "@angular/forms": "4.3.6",
-    "@angular/http": "4.3.6",
-    "@angular/platform-browser": "4.3.6",
-    "@angular/router": "4.3.6",
+    "@angular/animations": "4.2.5",
+    "@angular/common": "4.2.5",
+    "@angular/compiler": "4.2.5",
+    "@angular/core": "4.2.5",
+    "@angular/forms": "4.2.5",
+    "@angular/http": "4.2.5",
+    "@angular/platform-browser": "4.2.5",
+    "@angular/router": "4.2.5",
     "big-integer": "^1.6.24",
     "crypto-js": "^3.1.9-1",
     "file-system": "^2.2.2",
@@ -42,8 +42,10 @@
     "nativescript-angular": "4.2.0",
     "nativescript-barcodescanner": "^2.6.1",
     "nativescript-cardview": "^2.0.2",
+    "nativescript-clipboard": "^1.1.6",
     "nativescript-pulltorefresh": "^2.0.2",
     "nativescript-snackbar": "^1.3.0",
+    "nativescript-social-share": "^1.4.0",
     "nativescript-theme-core": "1.0.4",
     "nativescript-zxing": "^1.5.2",
     "reflect-metadata": "0.1.10",
@@ -53,7 +55,7 @@
     "zone.js": "0.8.16"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "4.3.6",
+    "@angular/compiler-cli": "4.2.5",
     "@ngtools/webpack": "~1.6.0",
     "@types/chai": "^4.0.3",
     "@types/mocha": "^2.2.41",
