--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "id": "org.icewave.burstcoinwallet",
     "tns-android": {
       "version": "3.2.0"
+    },
+    "tns-ios": {
+      "version": "3.2.0"
     }
   },
   "scripts": {
