--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
     "nativescript-cardview": "^2.0.2",
     "nativescript-clipboard": "^1.1.6",
     "nativescript-iqkeyboardmanager": "^1.1.0",
-    "nativescript-pulltorefresh": "^2.0.2",
     "nativescript-snackbar": "^1.3.0",
     "nativescript-social-share": "^1.4.0",
+    "nativescript-telerik-ui": "^3.1.4",
     "nativescript-theme-core": "1.0.4",
     "nativescript-zxing": "^1.5.2",
     "ng2-translate": "^5.0.0",
