--- a/package.json
+++ b/package.json
@@ -39,26 +39,25 @@
     "@angular/http": "4.2.5",
     "@angular/platform-browser": "4.2.5",
     "@angular/router": "4.2.5",
-    "bn.js": "^4.11.8",
-    "crypto-js": "^3.1.9-1",
-    "libsodium": "^0.5.2",
-    "loki-nativescript-adapter": "^1.0.3",
-    "lokijs": "^1.5.0",
+    "bn.js": "4.11.8",
+    "crypto-js": "3.1.9-1",
+    "loki-nativescript-adapter": "1.0.3",
+    "lokijs": "1.5.1",
     "nativescript-angular": "4.2.0",
-    "nativescript-barcodescanner": "^2.6.1",
-    "nativescript-cardview": "^2.0.2",
-    "nativescript-clipboard": "^1.1.6",
-    "nativescript-iqkeyboardmanager": "^1.1.0",
-    "nativescript-snackbar": "^1.3.0",
-    "nativescript-social-share": "^1.4.0",
-    "nativescript-telerik-ui": "^3.1.4",
+    "nativescript-barcodescanner": "2.7.4",
+    "nativescript-cardview": "2.0.4",
+    "nativescript-clipboard": "1.1.7",
+    "nativescript-iqkeyboardmanager": "1.1.0",
+    "nativescript-snackbar": "2.0.0",
+    "nativescript-social-share": "1.5.0",
+    "nativescript-pro-ui": "3.3.0",
     "nativescript-theme-core": "1.0.4",
-    "nativescript-zxing": "^1.5.2",
-    "ng2-translate": "^5.0.0",
+    "nativescript-zxing": "1.5.2",
+    "ng2-translate": "5.0.0",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.4.3",
-    "seedrandom": "^2.4.3",
-    "tns-core-modules": "3.2.0",
+    "seedrandom": "2.4.3",
+    "tns-core-modules": "3.4.0",
     "zone.js": "0.8.16"
   },
   "devDependencies": {
@@ -79,7 +78,7 @@
     "nativescript-css-loader": "~0.26.0",
     "nativescript-dev-sass": "1.3.0",
     "nativescript-dev-typescript": "0.5.0",
-    "nativescript-dev-webpack": "^0.8.0",
+    "nativescript-dev-webpack": "0.9.0",
     "nativescript-worker-loader": "~0.8.1",
     "node-sass": "4.5.3",
     "nyc": "^11.1.0",
@@ -87,9 +86,11 @@
     "resolve-url-loader": "~2.1.0",
     "source-map-support": "^0.4.16",
     "tslint": "5.6.0",
-    "typescript": "2.5.2",
+    "typescript": "2.6.2",
     "webpack": "~3.2.0",
     "webpack-bundle-analyzer": "^2.8.2",
-    "webpack-sources": "~1.0.1"
+    "webpack-sources": "~1.0.1",
+    "css-loader": "~0.28.7",
+    "sass-loader": "~6.0.6"
   }
 }
