--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "ng2-translate": "5.0.0",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.4.3",
+    "secure-random": "1.1.1",
     "seedrandom": "2.4.3",
     "tns-core-modules": "3.4.0",
     "zone.js": "0.8.16"
