--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "nativescript-theme-core": "1.0.4",
     "nativescript-zxing": "1.5.2",
     "ng2-translate": "5.0.0",
+    "pako": "1.0.6",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.4.3",
     "seedrandom": "2.4.3",
