--- a/package.json
+++ b/package.json
@@ -31,19 +31,20 @@
     "build-ios-bundle": "npm run ns-bundle --ios --build-app"
   },
   "dependencies": {
-    "@angular/animations": "4.2.5",
-    "@angular/common": "4.2.5",
-    "@angular/compiler": "4.2.5",
-    "@angular/core": "4.2.5",
-    "@angular/forms": "4.2.5",
-    "@angular/http": "4.2.5",
-    "@angular/platform-browser": "4.2.5",
-    "@angular/router": "4.2.5",
+    "@angular/animations": "~5.0.0",
+    "@angular/common": "~5.0.0",
+    "@angular/compiler": "~5.0.0",
+    "@angular/core": "~5.0.0",
+    "@angular/forms": "~5.0.0",
+    "@angular/http": "~5.0.0",
+    "@angular/platform-browser": "~5.0.0",
+    "@angular/platform-browser-dynamic": "~5.0.0",
+    "@angular/router": "~5.0.0",
     "bn.js": "4.11.8",
     "crypto-js": "3.1.9-1",
     "loki-nativescript-adapter": "1.0.3",
     "lokijs": "1.5.1",
-    "nativescript-angular": "4.2.0",
+    "nativescript-angular": "5.0.0",
     "nativescript-barcodescanner": "2.7.4",
     "nativescript-cardview": "2.0.4",
     "nativescript-clipboard": "1.1.7",
@@ -62,8 +63,8 @@
     "zone.js": "0.8.16"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "4.2.5",
-    "@ngtools/webpack": "~1.6.0",
+    "@angular/compiler-cli": "~5.0.0",
+    "@ngtools/webpack": "1.9.3",
     "@types/chai": "^4.0.3",
     "@types/mocha": "^2.2.41",
     "babel-traverse": "6.26.0",
@@ -88,7 +89,7 @@
     "source-map-support": "^0.4.16",
     "tslint": "5.6.0",
     "typescript": "2.6.2",
-    "webpack": "~3.2.0",
+    "webpack": "~3.8.1",
     "webpack-bundle-analyzer": "^2.8.2",
     "webpack-sources": "~1.0.1",
     "css-loader": "~0.28.7",
